# plainLM

./: .gitignore  LICENSE  README.md  avg_and_eval.py  avg_log.py  check.py  checkpoint_utils.py  eval_ckpt_folder.py  interplolate.py  nos_demo.py  nos_main.py  nos_neps.py  nos_space.py  nos_train.py  pyproject.toml  requirements.txt  sharpness.txt  spectra.py  spectra_trace.py  torch_utils.py  train.py  utils.py
avg/: __init__.py  avg.py  ewa_offline.py  lawa.py  lawa_offline.py  lawa_queue_non_blocking.py  lawa_queue_offline.py  lewa_offline.py  log_spaced_lawa.py
config/: 70M_10BT.yaml  config.yaml  config_doc_mask.yaml  debug.yaml  doc_mask_2048_valid.yaml  doc_mask_sweep.yaml  doc_mask_sweep_8192.yaml  doc_mask_sweep_8192_bsz_256.yaml  stateful_resume_01.yaml  stateful_save_01.yaml  test.yaml  test_2048.yaml  test_8192.yaml  test_mem.yaml  tr_420M_x8gpu.yaml
data/: __init__.py  dataloaders.py  datasamplers.py
engine/: __init__.py  checkpointer.py  engine.py
files/: all.txt  cosine_all.txt  cosine_every_10000.txt  every_2000.txt  every_4000.txt  every_4000_missing.txt  lawa_all.txt  lawa_decay_every_4000.txt  lawa_every_4000.txt  loss_connection_lawa.txt  lrs_all.txt  lrs_every_10000.txt  trace_convergence.txt
models/: __init__.py  components.py  construct.py  embeddings.py  param_count.py  transformer.py  transformer_explicit_attention.py
optim/: __init__.py  adamC.py  adam_monitor.py  adamwcustom.py  albertw.py  custom_adam.py  custom_muon.py  init_optim.py  lr_schedule.py  muon.py  signSGD.py  zero1adamw.py
sharpness/: check.py
(+222 files in other folders)
