[project]
name = "plainLM"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "numpy>=2.3.4",
    "PyYAML>=6.0.3",
    "schedulefree>=1.4.1",
    "torch>=2.6.0",
    "transformers>=4.44.2",
    "wandb>=0.22.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"
